// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Normal Comment > do not show opinions if not login 1`] = `
<div>
  <div>
    <div
      class="bgm-comment__header"
      id="post_2104702"
    >
      <div
        class="bgm-avatar bgm-avatar--medium"
      >
        <img
          src="https://lain.bgm.tv/pic/user/l/icon.jpg"
        />
      </div>
      <div
        class="bgm-comment__box"
      >
        <div
          class="bgm-comment__main"
        >
          <span
            class="bgm-comment__tip"
          >
            <div
              class="creator-info"
            >
              <a
                class="bgm-link"
                href="https://bgm.tv/user/123456789"
              >
                用户
              </a>
              <span>
                (我是签名)
              </span>
            </div>
            <div
              class="comment-info"
            >
              <span
                class="bgm-topic__commentInfo"
              >
                <a
                  href="#post_2104702"
                >
                  #
                  233
                </a>
                  
                |
                  
                2022-9-22 06:03
              </span>
            </div>
          </span>
          <div
            class="bgm-rich-content bgm-comment__content"
          >
            123456789~~~
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Normal Comment > should highlight comment corresponding to hash 1`] = `
<div>
  <div>
    <div
      class="bgm-comment__header bgm-comment__header--highlighted"
      id="post_2104702"
    >
      <div
        class="bgm-avatar bgm-avatar--medium"
      >
        <img
          src="https://lain.bgm.tv/pic/user/l/icon.jpg"
        />
      </div>
      <div
        class="bgm-comment__box"
      >
        <div
          class="bgm-comment__main"
        >
          <span
            class="bgm-comment__tip"
          >
            <div
              class="creator-info"
            >
              <a
                class="bgm-link"
                href="https://bgm.tv/user/123456789"
              >
                用户
              </a>
              <span>
                (我是签名)
              </span>
            </div>
            <div
              class="comment-info"
            >
              <span
                class="bgm-topic__commentInfo"
              >
                <a
                  href="#post_2104702"
                >
                  #
                  233
                </a>
                  
                |
                  
                2022-9-22 06:03
              </span>
                |  
              <div
                class="bgm-comment-actions"
              >
                <button
                  class="bgm-button bgm-button--plain bgm-button--size-small"
                  title="回复"
                >
                  <div />
                </button>
                <div
                  class="bgm-popover"
                >
                  <button
                    class="bgm-button bgm-comment-actions__more bgm-button--plain bgm-button--size-small"
                    title="其他"
                  >
                    <div />
                  </button>
                  <div
                    class="bgm-popover__container"
                  >
                    <div
                      class="bgm-popover__content"
                    >
                      <div
                        class="bgm-comment-actions__popover"
                      >
                        <button
                          class="bgm-button bgm-button--text"
                        >
                          绝交
                        </button>
                        <button
                          class="bgm-button bgm-button--text"
                        >
                          报告疑虑
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </span>
          <div
            class="bgm-rich-content bgm-comment__content"
          >
            123456789~~~
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="bgm-comment__header bgm-comment__header--reply bgm-comment__header--highlighted"
        id="post_2104702"
      >
        <div
          class="bgm-avatar bgm-avatar--small"
        >
          <img
            src="https://lain.bgm.tv/pic/user/m/icon.jpg"
          />
        </div>
        <div
          class="bgm-comment__box"
        >
          <div
            class="bgm-comment__main"
          >
            <span
              class="bgm-comment__tip"
            >
              <div
                class="creator-info"
              >
                <a
                  class="bgm-link"
                  href="https://bgm.tv/user/123456789"
                >
                  用户
                </a>
              </div>
              <div
                class="comment-info"
              >
                <span
                  class="bgm-topic__commentInfo"
                >
                  <a
                    href="#post_2104702"
                  >
                    #
                    233-1
                  </a>
                    
                  |
                    
                  2022-9-22 06:03
                </span>
                  |  
                <div
                  class="bgm-comment-actions"
                >
                  <button
                    class="bgm-button bgm-button--plain bgm-button--size-small"
                    title="回复"
                  >
                    <div />
                  </button>
                  <div
                    class="bgm-popover"
                  >
                    <button
                      class="bgm-button bgm-comment-actions__more bgm-button--plain bgm-button--size-small"
                      title="其他"
                    >
                      <div />
                    </button>
                    <div
                      class="bgm-popover__container"
                    >
                      <div
                        class="bgm-popover__content"
                      >
                        <div
                          class="bgm-comment-actions__popover"
                        >
                          <button
                            class="bgm-button bgm-button--text"
                          >
                            绝交
                          </button>
                          <button
                            class="bgm-button bgm-button--text"
                          >
                            报告疑虑
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </span>
            <div
              class="bgm-rich-content bgm-comment__content"
            >
              123456789~~~
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Normal Comment > should render 0 1`] = `
<div>
  <div>
    <div
      class="bgm-comment__header"
      id="post_2104702"
    >
      <div
        class="bgm-avatar bgm-avatar--medium"
      >
        <img
          src="https://lain.bgm.tv/pic/user/l/icon.jpg"
        />
      </div>
      <div
        class="bgm-comment__box"
      >
        <div
          class="bgm-comment__main"
        >
          <span
            class="bgm-comment__tip"
          >
            <div
              class="creator-info"
            >
              <a
                class="bgm-link"
                href="https://bgm.tv/user/123456789"
              >
                用户
              </a>
              <span>
                (我是签名)
              </span>
            </div>
            <div
              class="comment-info"
            >
              <span
                class="bgm-topic__commentInfo"
              >
                <a
                  href="#post_2104702"
                >
                  #
                  233
                </a>
                  
                |
                  
                2022-9-22 06:03
              </span>
                |  
              <div
                class="bgm-comment-actions"
              >
                <button
                  class="bgm-button bgm-button--plain bgm-button--size-small"
                  title="回复"
                >
                  <div />
                </button>
                <div
                  class="bgm-popover"
                >
                  <button
                    class="bgm-button bgm-comment-actions__more bgm-button--plain bgm-button--size-small"
                    title="其他"
                  >
                    <div />
                  </button>
                  <div
                    class="bgm-popover__container"
                  >
                    <div
                      class="bgm-popover__content"
                    >
                      <div
                        class="bgm-comment-actions__popover"
                      >
                        <button
                          class="bgm-button bgm-button--text"
                        >
                          绝交
                        </button>
                        <button
                          class="bgm-button bgm-button--text"
                        >
                          报告疑虑
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </span>
          <div
            class="bgm-rich-content bgm-comment__content"
          >
            123456789~~~
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Normal Comment > should render 6 1`] = `
<div>
  <div>
    <div
      class="bgm-comment__header"
      id="post_2104702"
    >
      <div
        class="bgm-avatar bgm-avatar--medium"
      >
        <img
          src="https://lain.bgm.tv/pic/user/l/icon.jpg"
        />
      </div>
      <div
        class="bgm-comment__box"
      >
        <div
          class="bgm-comment__main"
        >
          <span
            class="bgm-comment__tip"
          >
            <div
              class="creator-info"
            >
              <a
                class="bgm-link"
                href="https://bgm.tv/user/123456789"
              >
                用户
              </a>
              <span>
                (我是签名)
              </span>
            </div>
            <div
              class="comment-info"
            >
              <span
                class="bgm-topic__commentInfo"
              >
                <a
                  href="#post_2104702"
                >
                  #
                  233
                </a>
                  
                |
                  
                2022-9-22 06:03
              </span>
            </div>
          </span>
          <div
            class="bgm-comment__content--deleted"
          >
            内容已被用户删除
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Normal Comment > should render 7 1`] = `
<div>
  <div>
    <div
      class="bgm-comment__header"
      id="post_2104702"
    >
      <div
        class="bgm-avatar bgm-avatar--medium"
      >
        <img
          src="https://lain.bgm.tv/pic/user/l/icon.jpg"
        />
      </div>
      <div
        class="bgm-comment__box"
      >
        <div
          class="bgm-comment__main"
        >
          <span
            class="bgm-comment__tip"
          >
            <div
              class="creator-info"
            >
              <a
                class="bgm-link"
                href="https://bgm.tv/user/123456789"
              >
                用户
              </a>
              <span>
                (我是签名)
              </span>
            </div>
            <div
              class="comment-info"
            >
              <span
                class="bgm-topic__commentInfo"
              >
                <a
                  href="#post_2104702"
                >
                  #
                  233
                </a>
                  
                |
                  
                2022-9-22 06:03
              </span>
            </div>
          </span>
          <div
            class="bgm-comment__content--deleted"
          >
            内容因违反「
            <a
              class="bgm-link"
              href="https://bgm.tv/about/guideline"
            >
              社区指导原则
            </a>
            」已被删除
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Normal Comment > should render with reply 1`] = `
<div>
  <div>
    <div
      class="bgm-comment__header"
      id="post_2104702"
    >
      <div
        class="bgm-avatar bgm-avatar--medium"
      >
        <img
          src="https://lain.bgm.tv/pic/user/l/icon.jpg"
        />
      </div>
      <div
        class="bgm-comment__box"
      >
        <div
          class="bgm-comment__main"
        >
          <span
            class="bgm-comment__tip"
          >
            <div
              class="creator-info"
            >
              <a
                class="bgm-link"
                href="https://bgm.tv/user/123456789"
              >
                用户
              </a>
              <span>
                (我是签名)
              </span>
            </div>
            <div
              class="comment-info"
            >
              <span
                class="bgm-topic__commentInfo"
              >
                <a
                  href="#post_2104702"
                >
                  #
                  233
                </a>
                  
                |
                  
                2022-9-22 06:03
              </span>
                |  
              <div
                class="bgm-comment-actions"
              >
                <button
                  class="bgm-button bgm-button--plain bgm-button--size-small"
                  title="回复"
                >
                  <div />
                </button>
                <div
                  class="bgm-popover"
                >
                  <button
                    class="bgm-button bgm-comment-actions__more bgm-button--plain bgm-button--size-small"
                    title="其他"
                  >
                    <div />
                  </button>
                  <div
                    class="bgm-popover__container"
                  >
                    <div
                      class="bgm-popover__content"
                    >
                      <div
                        class="bgm-comment-actions__popover"
                      >
                        <button
                          class="bgm-button bgm-button--text"
                        >
                          绝交
                        </button>
                        <button
                          class="bgm-button bgm-button--text"
                        >
                          报告疑虑
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </span>
          <div
            class="bgm-rich-content bgm-comment__content"
          >
            123456789~~~
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="bgm-comment__header bgm-comment__header--reply"
        id="post_2104702"
      >
        <div
          class="bgm-avatar bgm-avatar--small"
        >
          <img
            src="https://lain.bgm.tv/pic/user/m/icon.jpg"
          />
        </div>
        <div
          class="bgm-comment__box"
        >
          <div
            class="bgm-comment__main"
          >
            <span
              class="bgm-comment__tip"
            >
              <div
                class="creator-info"
              >
                <a
                  class="bgm-link"
                  href="https://bgm.tv/user/123456789"
                >
                  用户
                </a>
              </div>
              <div
                class="comment-info"
              >
                <span
                  class="bgm-topic__commentInfo"
                >
                  <a
                    href="#post_2104702"
                  >
                    #
                    233-1
                  </a>
                    
                  |
                    
                  2022-9-22 06:03
                </span>
                  |  
                <div
                  class="bgm-comment-actions"
                >
                  <button
                    class="bgm-button bgm-button--plain bgm-button--size-small"
                    title="回复"
                  >
                    <div />
                  </button>
                  <div
                    class="bgm-popover"
                  >
                    <button
                      class="bgm-button bgm-comment-actions__more bgm-button--plain bgm-button--size-small"
                      title="其他"
                    >
                      <div />
                    </button>
                    <div
                      class="bgm-popover__container"
                    >
                      <div
                        class="bgm-popover__content"
                      >
                        <div
                          class="bgm-comment-actions__popover"
                        >
                          <button
                            class="bgm-button bgm-button--text"
                          >
                            绝交
                          </button>
                          <button
                            class="bgm-button bgm-button--text"
                          >
                            报告疑虑
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </span>
            <div
              class="bgm-rich-content bgm-comment__content"
            >
              123456789~~~
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Special Comment > should render state is 1 1`] = `
<div>
  <div
    class="bgm-comment__header bgm-comment__header--collapsed"
    id="post_2056216"
  >
    <span
      class="bgm-comment__tip"
    >
      <div
        class="creator-info"
      >
        <div />
        <a
          class="bgm-link"
          href="https://bgm.tv/user/123456789"
        >
          用户
        </a>
        <div
          class="bgm-comment__content"
        >
          关闭了该主题
        </div>
      </div>
      <span
        class="bgm-topic__commentInfo"
      >
        2022-7-17 04:08
      </span>
    </span>
  </div>
</div>
`;

exports[`Special Comment > should render state is 2 1`] = `
<div>
  <div
    class="bgm-comment__header bgm-comment__header--collapsed"
    id="post_2056216"
  >
    <span
      class="bgm-comment__tip"
    >
      <div
        class="creator-info"
      >
        <div />
        <a
          class="bgm-link"
          href="https://bgm.tv/user/123456789"
        >
          用户
        </a>
        <div
          class="bgm-comment__content"
        >
          重新开启了该主题
        </div>
      </div>
      <span
        class="bgm-topic__commentInfo"
      >
        2022-7-17 04:08
      </span>
    </span>
  </div>
</div>
`;

exports[`Special Comment > should render state is 5 1`] = `
<div>
  <div
    class="bgm-comment__header bgm-comment__header--collapsed"
    id="post_2056216"
  >
    <span
      class="bgm-comment__tip"
    >
      <div
        class="creator-info"
      >
        <div />
        <a
          class="bgm-link"
          href="https://bgm.tv/user/123456789"
        >
          用户
        </a>
        <div
          class="bgm-comment__content"
        >
          下沉了该主题
        </div>
      </div>
      <span
        class="bgm-topic__commentInfo"
      >
        2022-7-17 04:08
      </span>
    </span>
  </div>
</div>
`;
